# upstitch

./: .gitignore  code-workspace.code-workspace  daily_backup.sh  fix_permissions.sh  setup.bat  setup.sh  unsetup.bat  unsetup.sh
Billbee-Artikelmanager/: .gitignore  Commands.txt  Neue Artikel TRX.bat  Neue Artikel TRX.sh  claude.md  requirements.txt  setup.bat  setup.sh  unsetup.bat  unsetup.sh
Fahrtkosten-Generator/: config.json  fahrtkosten-tabelle.py  generate_fahrtkosten_pdfs.py  inspect_tabelle.py  requirements.txt  setup.sh  unsetup.sh
Geh-Abr-Splitter/: setup.bat  setup.sh  start_mac.sh  start_windows.bat  unsetup.bat  unsetup.sh
amazon-sp-client/: .env.template  .gitignore  amazon_sp_client.py  pyproject.toml
billbee-python-client/: .gitignore  billbee_client.py  pyproject.toml
emailBot/: setup.sh  unsetup.sh
fetchBillbeeDocs/: .env.template  CLAUDE.md  run.bat  setup.bat  setup.sh  unsetup.bat  unsetup.sh
fixBillbeeAdresses/: .env.example  .gitignore  CLAUDE.md  fixaddresses.bat  fixaddresses.sh  getLabels.bat  getlabels.sh  main.py  requirements.txt  run.bat  run.sh  run_labels.py  setup.bat  setup.sh  test_label.py  unsetup.bat  unsetup.sh
gmailAttachmentExtractor/: .gitignore  config.yaml  setup.sh  unsetup.sh
google-client/: google_drive_downloader.py  google_sheets_client.py  pyproject.toml
googleDocScraper/: .id_map.json  clone_gdocs_from_sheet.py  config.yaml  download_skool_videos.py  screenshot_fallback.py
gui-manager/: .gitignore  setup.bat  setup.sh  setup_backend.bat  setup_backend.sh  setup_frontend.bat  setup_frontend.sh  setup_tools.py  show-logs.bat  start.bat  (+8 more)
(+184 files in other folders)
