[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "billbee-client"
version = "0.1.0"
description = "Shared Billbee API client for Prenerds automation projects"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "python-dotenv",
]

[tool.setuptools]
# Install billbee_client.py as a top-level module (not a package directory)
py-modules = ["billbee_client"]
